# SEAMLeSS

./: .dockerignore  .gitignore  AUTHORS  ChangeLog  LICENSE  README.md  analysis_helpers.py  aug.py  bufferlog.txt  coords_test.txt  coords_train.txt  coords_valid.txt  cv_sampler.py  gen_stack.py  hparams.json  load_time.txt  load_time_16.txt  loss.py  nohup.out  pyramid.py  requirements.txt  run.sh  run_32.sh  run_32_no_pin.sh  run_8.sh  run_8_no_pin.sh  run_no_pin.sh  setup.cfg  setup.py  setup.sh  train.py  unet2d.py
align_env/: pip-selfcheck.json
coords/: basil_raw_cropped_crack_train_mip5coords.txt  basil_raw_cropped_train_mip5coords.txt
defects/: 180417 DefectDetectorUNet.ipynb  180417 FoldDetectorUNet.ipynb  180625 DefectDetectorUNet-mip2.ipynb  180625 DefectDetectorUNet.ipynb  180625_negative_indices.csv  180703_negative_indices_mip5.csv  180704 Compare Downsamples.ipynb  180718 DefectDetectorUNet-Parallel.ipynb  CrackDetectorUNet.ipynb  DetectDefects-pinky100.ipynb  DetectFolds.ipynb  aug.py  helpers.py
eval/: README.md  chunked.py  cpc.py  eval_ncc_chunked.py  util.py
inference/: #process.py#  '  .gitignore  .restarter.sh.swo  1ktest_x0.txt  :w  :wq  =1.4.1  PyramidTransformer.py  README.md  Untitled0.ipynb  Visualize.ipynb  XmasTransformer.py  align.py  align_block_status_1580687323.txt  align_block_status_1580701191.txt  align_block_status_1580715418.txt  align_block_status_1580749550.txt  align_block_status_1580972106.txt  align_block_status_1580972400.txt  align_block_status_1580972610.txt  align_block_status_1580973001.txt  align_blocks.py  (+255 more)
(+1291 files in other folders)
