[metadata]
name = seamless
url = https://github.com/seung-lab/SEAMLeSS
summary = Siamese Encoding and Alignment by Multiscale Learning with Self-Supervision
description-file =
    README.md
author = Davit Buniatyan, Sergiy Popovych, Eric Mitchell, Tommy Macrina, Barak Nehoran, Zhen Jia
author-email = davit@princeton.edu
home-page = https://github.com/seung-lab/SEAMLeSS
license=BSD

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = seamless
